Updated login page by removing conact us section, and applied a fixed a navbar position to remove the whitespace

--- a/css/custom.css
+++ b/css/custom.css
@@ -103,6 +103,13 @@
     /*update-end*/
 }
 
+.custom-footer-position-fix{
+            background-color: #333;
+            width: 100%;
+            bottom: 0;
+            position: fixed;
+            margin-top: 100px;
+}
 
 .custom-hr {
   height: 1px;
